# PaintOfTheTempest

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  main.h
src/shaders/: fragment.glsl  vertex.glsl
